fix(activity-sidebar): delete and cancel button misalignment (#2772)
Bug fix for delete and cancel button misalignment on comment deletion confirmation modal.

--- a/src/elements/content-sidebar/activity-feed/common/delete-confirmation/DeleteConfirmation.scss
+++ b/src/elements/content-sidebar/activity-feed/common/delete-confirmation/DeleteConfirmation.scss
@@ -16,11 +16,11 @@
 }
 
 // overrides for confirm/cancel button spacing
-.bcs-DeleteConfirmation-delete,
-.bcs-DeleteConfirmation-cancel {
+.btn.bcs-DeleteConfirmation-delete,
+.btn.bcs-DeleteConfirmation-cancel {
     margin-left: 0;
 }
 
-.bcs-DeleteConfirmation-cancel {
+.btn.bcs-DeleteConfirmation-cancel {
     margin-right: 10px;
 }
